# rust-serialization-benchmarks

./: .gitignore  Makefile  README.md  go.mod  go.sum
cmd/bench/: bench_test.go  main.go
pkg/types/: types.generated.go  types.go
rust/: Cargo.toml  Makefile
rust/benches/: bench.rs
rust/src/: lib.rs  main.rs
