[package]
name = "rust-serde-benchmarks"
version = "0.0.1"
authors = ["erick.tryzelaar@gmail.com"]
build = "build.rs"

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
rmp = "^0.8"
rmp-serde = "^1.1.1"
serde = { version = "^1.0.160", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "^1.0.96"
serde_derive = "1.0"
